--- a/app/views/gadgets/new.html.erb
+++ b/app/views/gadgets/new.html.erb
@@ -1,8 +1,11 @@
-<div id="page-wrapper">
- <%= render 'shared/header' %>
-  
- <div class="gadget_form">
-  <%= render 'form' %>
- </div>
- 
+<div class="layout">
+  <%= render '/shared/header' %>
+
+  <div class="gadgets">
+    <div class="wrap">
+     <div class="gadget_form">
+      <%= render 'form' %>
+     </div>
+    </div> 
+  </div>
 </div>
