--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -18,10 +18,10 @@ p{margin:1em 0;}
 .gadgets .bigBox .filters a:hover, .filters a.active-filter {color:#000;}
 /* Boxes */
 .gadgets .bigBox .container article {display:inline;float:left;width:31.6%;margin: 0 10.4px 20px;margin: 0 10.4px;}
-.gadgets .bigBox .container article a {display:block;padding:10px;background:#fff;overflow:hidden;color:#f27d00;text-decoration:none;}
+.gadgets .bigBox .container article a {display:block;padding:10px;background:#fff;overflow:hidden;color:#000;text-decoration:none;}
 .gadgets .bigBox .container article a:hover img {-webkit-transition: all 0.5s ease;-moz-transition: all 0.5s ease;-ms-transition: all 0.5s ease;transition: all 0.5s ease;opacity: 0.8;}
-.gadgets .bigBox .container article img {width: 100%;height: 250px;object-fit:cover;/*margin: 0 -20px 20px;*/}
-.gadgets .bigBox .container article i {font-style: normal;text-transform: uppercase;font-weight: bold;font-size: 11px;display: block;margin: 0 0 5px;}
+.gadgets .bigBox .container article img{width:100%;height:250px;object-fit:contain;border-bottom:1px solid #000;padding-bottom:10px;}
+.gadgets .bigBox .container article i {font-style:normal;text-transform: uppercase;font-weight: bold;font-size:13px;display:block;margin: 0 0 5px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .gadgets .bigBox .container article b {font-weight: normal;font-size: 20px;color: #121212;padding-bottom: 10px;}
 .gadgets .bigBox .container article.current {margin-bottom: 0;border-bottom: 20px solid #000;}
 .gadgets .bigBox .container article div{display:none;}
@@ -31,12 +31,17 @@ p{margin:1em 0;}
 .content a {float: right;font-size: 13px;line-height: 17px;}
 .content img, .content video {display: block;width: 100%;height: auto;margin: 0 0 20px;}
 .content i {font-style: normal;text-transform: uppercase;font-weight: bold;font-size: 11px;color: #f27d00;}
-.content b {font-weight: normal;font-size: 30px;/*color: #121212;*/color:#fff;margin: 18px 0;display: block;}
+.content b {font-weight:normal;font-size:17px;/*color: #121212;*/color:#fff;margin:10px 0;display:block;}
 
 .details {width: 100%;}
-.details .bio {width: 61.8%;float: left;padding-right: 20px;}
+.details .bio{width:60%;float:left;padding-right:5%;}
+.details .bio a{margin:20px 20px 0 0}
+.details .etc{width:35%;float:left;}
 .content p {font-size: 13px;line-height: 17px;color:#fff;}
 .bigbox {width: 100%;padding: 20px;overflow: hidden;}
+
+/* For Form */
+.gadget_form{margin-top:250px;}
 
 
 @media screen and (max-width:640px){
@@ -47,7 +52,9 @@ p{margin:1em 0;}
   .gadgets .bigBox .filters a:hover, .filters a.active-filter {color:#000;}
   /* Boxes */
   .gadgets .bigBox .container article{float:left;width:100%;margin:0;}
-  .details .bio {width:100%;float:none;padding-right: 20px;}
+  .gadgets .bigBox .container article img{width:100%;height:auto;object-fit:contain;}
+  .details .bio {width:100%;float:none;padding-right:0;margin-bottom:20px;}
+  .details .etc{width:100%;float:none;}
   .content{margin:0;}
   .content.open {margin:0;}
 }
@@ -59,7 +66,8 @@ p{margin:1em 0;}
   .gadgets .bigBox .filters a:hover, .filters a.active-filter {color:#000;}
   /* Boxes */
   .gadgets .bigBox .container article{float:left;width:47%;margin:0 1.5%;}
-  .details .bio {width:100%;float:none;padding-right: 20px;}
+  .details .bio {width:60%;float:left;padding-right:3%;}
+  .details .etc{width:37%;float:left;}
   .content{margin:0;}
   .content.open {margin:0;}
 }
