--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
       </div>
 
       <ul class="clearfix">
-        <li><a href="/gadgets/index">CATEGORY<span>,</span></a></li>
+        <li><a href="/gadgets/">CATEGORY<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
         <li><a href="/deals/promo_codes">DEALS <em>of Amazon</em></a></li>
       </ul>      
@@ -18,7 +18,7 @@
     <div class="gnb_m">      
       <ul class="clearfix">
         <li><a href="/">HOME<span>,</span></a></li> 
-        <li><a href="/gadgets/index">CATEGORY<span>,</span></a></li>
+        <li><a href="/gadgets">CATEGORY<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
         <li><a href="/deals/promo_codes">DEALS <em>of Amazon</em></a></li>
       </ul>
