--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -50,9 +50,11 @@
                     </div>
                     
                     <section class="card-body">
-                      <div class="js-overlay-start start" data-url= "<%= gadget.gg_youtube01 %>">
-                        <button><img src="<%=asset_path 'youtube_02.png' %>" alt="" /></button>
-                      </div>
+                      <% if gadget.gg_youtube01.present? %>
+                        <div class="js-overlay-start start" data-url= "<%= gadget.gg_youtube01 %>">
+                          <button><img src="<%=asset_path 'youtube_02.png' %>" alt="" /></button>
+                        </div>
+                      <% end %>
 
                      
                       <h4><a target="_blank" href="<%= gadget.gg_url %>"><%= gadget.gg_title %></a></h4>
