--- a/app/views/recommends/show.html.erb
+++ b/app/views/recommends/show.html.erb
@@ -1,6 +1,6 @@
 <div class="layout"><!--layout-->
     
-    <%= render 'posts/header' %>
+    <%= render 'shared/header' %>
 
     <!-- for play youtube video-->
     <div class="overlay-video">
