--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -8,8 +8,8 @@
 
 /*Variables*/
 * {-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
-a{color: #f27d00;text-decoration:none;}
-p{margin:1em 0;}
+/*a{color: #f27d00;text-decoration:none;}*/
+/*p{margin:1em 0;}*/
 .gadgets{}
 .gadgets .bigBox{margin-top:250px;}
 /* Top City Filter */
