--- a/app/views/gadgets/edit.html.erb
+++ b/app/views/gadgets/edit.html.erb
@@ -1,6 +1,5 @@
 <div id="page-wrapper">
- <%= render 'shared/header_show' %>
-  
+ <%= render 'shared/header' %>
  <div class="gadget_form">
   <%= render 'form' %>
  </div>
