--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -61,7 +61,10 @@
                       <p><%= gadget.gg_intro %></p>
                       <div class="btn clearfix">
                         <em>$<%= gadget.gg_aprice %></em><a target="_blank" href="<%= gadget.gg_url %>">Buy Now</a>
-                      </div>              
+                      </div>
+                      <div class="btn clearfix admin">
+                        <em><%= link_to "Edit", edit_gadget_path(gadget) %></em><%= link_to "Delete", gadget_path(gadget), method: :delete, data: {confirm: "Are you sure?"}%>
+                      </div>               
                     </section>
                   </div>
                 <% end %>
