--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -267,7 +267,7 @@
 .edtor_detail{margin-top:40px;}
 .edtor_detail .left{float:left;width:31.33%;margin:0 1%;}
 .edtor_detail .left .inner_wrap{color:#000;}
-.edtor_detail .left .inner_wrap .inner{border-top:2px solid;border-bottom:2px solid;padding-bottom:20px;text-align:right;width:30%;line-height:1.3;}
+.edtor_detail .left .inner_wrap .inner{border-top:2px solid;border-bottom:2px solid;padding-bottom:20px;text-align:left;width:60%;line-height:1.3;}
 .edtor_detail .left .inner_wrap .inner strong{font-size:50px;font-weight:500;}
 .edtor_detail .left .inner_wrap .inner p{font-size:25px;font-weight:500;}
 .edtor_detail .left .inner_wrap .inner em{font-size:25px;font-weight:500;}
@@ -280,7 +280,7 @@
 .edtor_detail .card_wrap .card em{border-bottom:1px solid #3d3d3d;display:block;text-align:right;font-weight:400;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .edtor_detail .card_wrap .card p{border-bottom:1px solid #ccc;padding-bottom:5px;padding:15px;}
 .edtor_detail .card_wrap .card .mid_image{margin:5px 0 10px 0;}
-.edtor_detail .card_wrap .card .mid_image img{width:100%;-webkit-filter: grayscale(100%);filter: gray;}
+.edtor_detail .card_wrap .card .mid_image img{width:100%;/*-webkit-filter: grayscale(100%);filter: gray;*/}
 .edtor_detail .card_wrap .card .mid_image img:hover{-webkit-filter:grayscale(0%);filter:none;}
 .edtor_detail .card_wrap .card .btn{margin:5px 0;display:inline-block;}
 .edtor_detail .card_wrap .card .btn>em{float:left;font-size:13px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:20px;}
