--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -7,8 +7,8 @@
   .codes .lt_cnt .toggle>ul>li.on{border-bottom:1px solid #3d3d3d;background:url(<%=asset_path 'toggle_hide_btn.png' %>) top 12px right 10px no-repeat;}
   .codes .lt_cnt .toggle>ul>li>a{text-decoration:none;color:#000;display:block;}
   .codes .lt_cnt .toggle>ul>li>ul{display:none;padding-left:17px;}
-  .codes .lt_cnt .toggle>ul>li>ul>li{padding:5px 10px;list-style: decimal;}
-  .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#000;display:block;}
+  .codes .lt_cnt .toggle>ul>li>ul>li{font-size:13px;padding:5px 10px;list-style: decimal;color:#3d3d3d;}
+  .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#08f;display:block;}
   .codes .lt_cnt .toggle>ul>li>ul>li>a>span{font-size:13px;}
 
   .codes .lt_cnt .lt_sort_box{display:none;}
@@ -47,7 +47,7 @@
   .codes .lt_cnt .toggle>ul>li>a{text-decoration:none;color:#000;display:block;}
   .codes .lt_cnt .toggle>ul>li>ul{display:none;list-style:decimal;padding-left:17px;}
   .codes .lt_cnt .toggle>ul>li>ul>li{padding:5px 10px;list-style: decimal;}
-  .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#000;display:block;}
+  .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#08f;display:block;}
 
   .codes .lt_cnt .lt_sort_box{display:none;}
   .codes .rt_cnt .sort_box{margin:10px 0;}
