--- a/app/views/blogs/_body.html.erb
+++ b/app/views/blogs/_body.html.erb
@@ -17,21 +17,38 @@
 	</div>
 </div>
 
-<div class="blog_box clearfix">
+<!-- <div class="blog_box clearfix">
+  <div class="date">
+    <em>Month</em>
+    <p>Date</p>
+  </div>
+  <div class="image">
+    <span>Month.date</span>
+    <a href="#n"><img src="Image_Url" alt="" /></a>
+  </div>
+  <div class="inner">
+    <h3><a href="#n">Blog_intro</p>
+    <div class="more_btn">
+      <a href="#n">See more detail
+      <img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
+    </div>
+  </div>
+</div> -->
+
+<!-- <div class="blog_box clearfix">
 	<div class="date">
-		<em>FEB</em>
-		<p>17</p>
+		<em>Month</em>
+		<p>Date</p>
 	</div>
 	<div class="image">
-		<span>FEB.17</span>
-		<a href="#n"><img src="https://images.unsplash.com/photo-1549394366-678c87f66535?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" /></a>
+		<span>Month.date</span>
+		<a href="#n"><img src="Image_Url" alt="" /></a>
 	</div>
 	<div class="inner">
-		<h3><a href="#n">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h3>
-		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+		<h3><a href="#n">Blog_intro</p>
 		<div class="more_btn">
 			<a href="#n">See more detail
 			<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
 		</div>
 	</div>
-</div>
+</div> -->
