--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -1,7 +1,23 @@
-<div class="card clearfix" data-tags="Coupons">
+<!-- <div class="card clearfix" data-tags="Category">
+    <div class="info_box">
+      <p><span>Percentage%</span><br /><em>OFF</em></p>
+      <strong>Category</strong>
+    </div>
+    <div class="inner">
+      
+      <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
+      <em>Coupons_Description</em>
+      <span>Expiration: Coupons_Date</span>
+    </div> 
+    <div class="deal_btn">
+      <a href="Site_Link">Shop Now</a>
+    </div>
+</div> -->
+
+<div class="card clearfix" data-tags="Coupons"><!--(Coupons or Deals)-->
     <div class="info_box">
       <p>70%<br /><em>OFF</em></p>
-      <strong>Coupon</strong>
+      <strong>Coupon</strong><!--(Coupons or Deals)-->
     </div>
     <div class="inner">
       
@@ -14,120 +30,19 @@
     </div>
  </div>
 
-<div class="card clearfix" data-tags="Coupons">
+<div class="card clearfix" data-tags="Category">
     <div class="info_box">
-      <p><span>40%</span><br /><em>OFF</em></p>
-      <strong>Coupon</strong>
+      <p><span>Percentage%</span><br /><em>OFF</em></p>
+      <strong>Category</strong>
     </div>
     <div class="inner">
       
-      <p>15% Off Entire Purchase(Rewards Members In Select Markets)Rewards Members In Select Market</p>
-      <em>Entire Purchase Rewards Members In Select Market Entire Purchase Rewards Members In Select Market</em>
-      <span>Expiration: 2019-02-10</span>
+      <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
+      <em>Coupons_Description</em>
+      <span>Expiration: Coupons_Date</span>
     </div> 
     <div class="deal_btn">
-      <a href="#n">Shop Now</a>
+      <a href="Site_Link">Shop Now</a>
     </div>
 </div>
   
-<div class="card clearfix" data-tags="Coupons">
-    <div class="info_box">
-      <p><span>50%</span><br /><em>OFF</em></p>
-      <strong>Coupon</strong>
-    </div>
-    <div class="inner">
-      
-      <p>15% Off Entire Purchase(Rewards Members In Select Markets)</p>
-      <em>Entire Purchase Rewards Members In Select Market Entire Purchase Rewards Members In Select Market Entire Purchase Rewards Members In Select Market Entire Purchase Rewards Members In Select Market</em>
-      <span>Expiration: 2019-02-10</span>
-    </div> 
-    <div class="deal_btn">
-      <a href="#n">Shop Now</a>
-    </div>
-</div>
-  
-<div class="card clearfix" data-tags="Coupons">
-    <div class="info_box">
-       <p><span>60%</span><br /><em>OFF</em></p>
-       <strong>Coupon</strong>
-    </div>
-    <div class="inner">
-      
-      <p>15% Off Entire Purchase</p>
-      <em>Entire Purchase Rewards Members </em>
-      <span>Expiration: 2019-02-10</span>
-    </div> 
-    <div class="deal_btn">
-      <a href="#n">Shop Now</a>
-    </div>
-</div>
-  
-<div class="card clearfix" data-tags="Coupons">
-    <div class="info_box">
-       <p><span>60%</span><br /><em>OFF</em></p>
-       <strong>Coupon</strong>
-    </div>
-    <div class="inner">
-      
-      <p>15% Off Entire Purchase</p>
-      <em>Entire Purchase Rewards Members </em>
-      <span>Expiration: 2019-02-10</span>
-    </div> 
-    <div class="deal_btn">
-      <a href="#n">Shop Now</a>
-    </div>
-</div>
-  
-<div class="card clearfix" data-tags="Deals">
-    <div class="info_box">
-      <div class="img_box">
-         <img src="https://m.media-amazon.com/images/I/81Z5AcQ+S2L._SR400,400_.jpg" alt="" />
-      </div>
-      <strong>Deal</strong>
-    </div>
-    <div class="inner">
-      
-      <p>15% Off Entire Purchase</p>
-      <em>Entire Purchase Rewards Members </em>
-      <span>Expiration: 2019-02-10</span>
-    </div> 
-    <div class="deal_btn">
-      <a href="#n">Shop Now</a>
-    </div>
-</div>
-  
-<div class="card clearfix" data-tags="Deals">
-    <div class="info_box">
-       <div class="img_box">
-         <img src="https://i.guim.co.uk/img/media/48e3f8488a2b6ed8f06360863b8bdfbced08bd53/271_1782_3256_2876/master/3256.jpg?width=300&quality=85&auto=format&fit=max&s=a10cfeb940a2e1dbd6a236ac7b48c003" alt="" />
-      </div>
-      <strong>Deal</strong>
-    </div>
-
-    <div class="inner">
-      <p>15% Off Entire Purchase</p>
-      <em>Entire Purchase Rewards Members </em>
-      <span>Expiration: 2019-02-10</span>
-    </div> 
-    <div class="deal_btn">
-      <a href="#n">Shop Now</a>
-    </div>
-</div>
-  
-<div class="card clearfix" data-tags="Deals">
-    <div class="info_box">
-       <div class="img_box">
-         <img src="https://pixel.nymag.com/imgs/daily/strategist/2018/11/15/sleep-tech/fitbit-charge-3.w710.h473.2x.jpg" alt="" />
-      </div>
-      <strong>Deal</strong>
-    </div>
-    <div class="inner">
-      
-      <p>15% Off Entire Purchase</p>
-      <em>Entire Purchase Rewards Members </em>
-      <span>Expiration: 2019-02-10</span>
-    </div> 
-    <div class="deal_btn">
-      <a href="#n">Shop Now</a>
-    </div>
-</div>
