--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -8,7 +8,7 @@
       <ul class="clearfix">
         <li><a href="/recommends/">Featured</a></li>
         <!--<li><a href="/guides/index">Gift Guide</a></li>-->
-        <li><a href="/editors/index">Editor's Pick</a></li>
+        <!-- <li><a href="/editors/index">Editor's Pick</a></li> -->
         <li><a class="active" href="/blogs/index">Blog</a></li>
       </ul>
     </div>
