--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -1,98 +1,143 @@
-<div class="card clearfix" data-score="15" data-price="9.99">
+<!-- <div class="card clearfix" data-score="percentage" data-price="price">
   <div class="image_box">
-    <a target="_blank" href="https://amzn.to/2IaH1lI"><img src="https://m.media-amazon.com/images/I/81Z5AcQ+S2L._SR400,400_.jpg" alt="" /></a>
+    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
   </div>
   <div class="inner">
-    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
     
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></p>
+    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
     <div class="code_high">
-      <p><span>Take <strong>15% off at $9.99</strong> using code:15K434VD</span></p>
+      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IaH1lI">Copy & Use code</a>
+    <a target="_blank" href="product_link">Copy & Use code</a>
   </div>
 </div>
+ -->
 
-<div class="card clearfix" data-score="50" data-price="10.00">
+
+<div class="card clearfix" data-score="percentage" data-price="price">
   <div class="image_box">
-    <a href="#n"><img src="https://images.unsplash.com/photo-1542841366-ddfe55c504a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" /></a>
-  </div>
-  <div class="inner clearfix">
-    <span class="regular"><em>50% OFF +</em> free shipping</span>
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></p>
-    <div class="code_high">
-     <p><span>Take <strong>30% off at $10.00</strong> using code: hellowrld1234</span></p></span></p>
-    </div>
-
-  </div> 
-  <div class="deal_btn">
-    <a href="#n">Copy & Use code</a>
-  </div>
-</div>
-
-<div class="card clearfix" data-score="30" data-price="20.00">
-  <div class="image_box">
-    <a href="#n"><img src="https://images.unsplash.com/photo-1549409829-782dfd401d01?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" /></a>
-  </div>
-  <div class="inner clearfix">
-    <span class="regular"><em>30% OFF +</em> free shipping</span>
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></p>
-    <div class="code_high">
-      <p><span>Take <strong>30% off at $20.00</strong> using code: hellowrld1234</span></p></span></p>
-    </div>
-  </div> 
-  <div class="deal_btn">
-    <a href="#n">Copy & Use code</a>
-  </div>
-</div>
-
-<div class="card clearfix" data-score="15" data-price="9.99">
-  <div class="image_box">
-    <a target="_blank" href="https://amzn.to/2IaH1lI"><img src="https://m.media-amazon.com/images/I/81Z5AcQ+S2L._SR400,400_.jpg" alt="" /></a>
+    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
   </div>
   <div class="inner">
-    <span class="regular"><em>15% OFF +</em> free shipping</span>
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></p>
+    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
     <div class="code_high">
-      <p><span>Take <strong>15% off at $9.99</strong> using code:15K434VD</span></p>
+      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IaH1lI">Copy & Use code</a>
+    <a target="_blank" href="product_link">Copy & Use code</a>
   </div>
 </div>
 
-<div class="card clearfix" data-score="50" data-price="10.00">
-  <div class="image_box">
-    <a href="#n"><img src="https://images.unsplash.com/photo-1542841366-ddfe55c504a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" /></a>
-  </div>
-  <div class="inner clearfix">
-    <span class="regular"><em>50% OFF +</em> free shipping</span>
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></p>
-    <div class="code_high">
-     <p><span>Take <strong>30% off at $10.00</strong> using code: hellowrld1234</span></p></span></p>
-    </div>
 
+<div class="card clearfix" data-score="percentage" data-price="price">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
+    </div>
   </div> 
   <div class="deal_btn">
-    <a href="#n">Copy & Use code</a>
+    <a target="_blank" href="product_link">Copy & Use code</a>
   </div>
 </div>
 
-<div class="card clearfix" data-score="30" data-price="20.00">
+
+<div class="card clearfix" data-score="percentage" data-price="price">
   <div class="image_box">
-    <a href="#n"><img src="https://images.unsplash.com/photo-1549409829-782dfd401d01?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" /></a>
+    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
   </div>
-  <div class="inner clearfix">
-    <span class="regular"><em>30% OFF +</em> free shipping</span>
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></p>
+  <div class="inner">
+    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
     <div class="code_high">
-      <p><span>Take <strong>30% off at $20.00</strong> using code: hellowrld1234</span></p></span></p>
+      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
     </div>
   </div> 
   <div class="deal_btn">
-    <a href="#n">Copy & Use code</a>
+    <a target="_blank" href="product_link">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="percentage" data-price="price">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="product_link">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="percentage" data-price="price">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="product_link">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="percentage" data-price="price">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="product_link">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="percentage" data-price="price">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="product_link">Copy & Use code</a>
   </div>
 </div>
