--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -7,18 +7,19 @@
       <div class="wrap">
         <div class="lt_cnt">
           <h2>Promotion Codes</h2>
-
-          <div class="note">
-            <ul>
-              <li>Deals & pricing may change or expire at anytime.</li>
-              <li>Some of promotion codes can expire fast.</li>
-              <li>Free Shipping: Prime or $35+ of all other eligible items.<a href="/blog/blog_01">(What's PRIME?)</a></li>
-              <li>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</li>
-            </ul>
-          </div>
           
          <div class="toggle">
             <ul>
+              <li>
+                <a href="#n">NOTES</a>
+                <ul>
+                  <li>Deals & pricing may change or expire at anytime.</li>
+                  <li>Some of promotion codes can expire fast.</li>
+                  <li>Free Shipping: Prime or $35+ of all other eligible items.<a href="/blog/blog_01">(What's PRIME?)</a></li>
+                  <li>Oh,igottabuythis is a participant in the Amazon Services LLC Associates Program & the Amazon EU Associates Programme, an affiliate advertising program designed to provide a means for us to earn fees by linking to Amazon.com, Amazon.ca, Amazon.co.uk and affiliated sites.</li>
+                  <li>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</li>
+                </ul>
+              </li>
               <li>
                 <a href="#n">HOW TO USE</a>
                 <ul>
@@ -30,13 +31,13 @@
               <li>
                 <a href="#n">LAST 7 DAYS CODES LIST</a>
                 <ul>
-                  <li><a href="#n">Feb. 10. 2019 <span>(expration:02/15 ~ 03/15)</span></a></li>
+         <!--          <li><a href="#n">Feb. 10. 2019 <span>(expration:02/15 ~ 03/15)</span></a></li>
                   <li><a href="#n">Feb. 09. 2019  <span>(expration:02/15 ~ 03/15)</span></a></li>
                   <li><a href="#n">Feb. 08. 2019</a></li>
                   <li><a href="#n">Feb. 07. 2019</a></li>
                   <li><a href="#n">Feb. 06. 2019</a></li>
                   <li><a href="#n">Feb. 05. 2019</a></li>
-                  <li><a href="#n">Feb. 04. 2019</a></li>
+                  <li><a href="#n">Feb. 04. 2019</a></li> -->
                 </ul>
               </li>
             </ul>
