--- a/app/views/home/index_01.html.erb
+++ b/app/views/home/index_01.html.erb
@@ -22,7 +22,7 @@
     <div class="edtor_detail clearfix">
       <div class="wrap">
       
-        <div class="left">
+        <div class="left lf_none">
           <div class="inner_wrap">
             <div class="inner">
               <strong>Featured.</strong>
@@ -83,7 +83,7 @@
             </div>
           <% end %>
 
-          <div class="card">
+          <!-- <div class="card">
             <em>1914 translation by H. Rackham</em>
             <div class="mid_image">
               <img src="https://images.unsplash.com/photo-1517524285303-d6fc683dddf8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" />
@@ -135,7 +135,7 @@
             </div>
           </div>
         </div>
-        
+         -->
       </div>
     </div>  
   </div><!--./layout-->
