--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -305,7 +305,8 @@
 @media screen and (min-width:641px) and (max-width:1199px){
   .edtor_detail{margin-top:20px;}
   .edtor_detail .left{float:left;width:28%;margin:0 2% 30px 0;}
-  .edtor_detail .card_wrap{float:left;width:70%;column-width:200px;column-gap:15px}
+  /*.edtor_detail .card_wrap{float:left;width:70%;column-width:200px;column-gap:15px}*/
+  .edtor_detail .card_wrap{float:left;width:100%;column-width:300px;column-gap:15px}
   .edtor_detail .card_wrap .card .mid_image img{width:100%;filter:none;}
   .giftail .card_wrap .card .btn>em,
   .giftail .card_wrap .card .btn>a{font-size:12px;}
