--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -50,3 +50,6 @@
 @media screen and (max-width:640px){
   .lf_none{display:none;}
 }
+@media screen and (min-width:641px) and (max-width:1199px){
+  .lf_none{display:none;}
+}
